--- a/app/src/main/res/layout/fragment_windmill.xml
+++ b/app/src/main/res/layout/fragment_windmill.xml
@@ -41,11 +41,10 @@
         <ImageButton
             android:id="@+id/image_button_exercise"
             android:layout_width="200dp"
-            android:layout_height="100dp"
             android:background="@drawable/clickable_button_background"
             android:padding="20dp"
             app:srcCompat="@drawable/vec_exercise_person"
-            />
+            android:layout_height="100dp"/>
 
     </LinearLayout>
 
