--- a/app/src/main/res/layout/fragment_windmill.xml
+++ b/app/src/main/res/layout/fragment_windmill.xml
@@ -14,7 +14,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.3"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
@@ -22,7 +21,7 @@
 
         <ImageView
             android:id="@+id/connected_status_respeck"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_weight="1"
             android:paddingBottom="15dp"
@@ -33,7 +32,7 @@
             android:id="@+id/image_button_diary"
             android:layout_width="200dp"
             android:layout_height="100dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:background="@drawable/clickable_button_background"
             android:padding="15dp"
             app:srcCompat="@drawable/vec_diary"/>
@@ -59,7 +58,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_weight="0.3"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="50dp">
@@ -101,7 +99,8 @@
             android:layout_height="80dp"
             app:srcCompat="@drawable/vec_standing_sitting"
             android:layout_weight="0.3"
-            android:layout_gravity="center_vertical"/>
+            android:layout_gravity="center_vertical"
+            />
 
     </LinearLayout>
 
