--- a/app/src/main/res/drawable/vec_orientation_respeck.xml
+++ b/app/src/main/res/drawable/vec_orientation_respeck.xml
@@ -52,13 +52,6 @@
         android:strokeWidth="0.69976526"
         android:strokeAlpha="1"/>
     <path
-        android:pathData="M32.13,82.35m-2,0a2,2 0,1 1,4.01 0a2,2 0,1 1,-4.01 0"
-        android:fillAlpha="1"
-        android:strokeColor="#00000000"
-        android:fillColor="#150703"
-        android:strokeWidth="0.73742896"
-        android:strokeAlpha="1"/>
-    <path
         android:pathData="m96.88,66.47 l5.71,0c0.63,0 1.14,0.51 1.14,1.14l0.01,3.19c0,0.17 -0.1,0.43 -0.25,0.58l-0.66,0.64c-0.74,0.01 -1.06,0.03 -1.26,0.03 -1.74,0 -4.73,0.19 -4.73,0.19 -0.63,-0.06 -1.05,-0.52 -1.14,-1.14l-0.45,-3.04c-0.03,-0.23 0.14,-0.68 0.41,-0.85 0,0 0.89,-0.73 1.22,-0.73z"
         android:fillAlpha="1"
         android:strokeColor="#00000000"
@@ -83,4 +76,57 @@
         android:pathData="m56.75,89.53 l-0.98,-0.91 1.09,-1.18 1.09,-1.18 0.01,0.52c0.01,0.63 0.09,0.64 1.73,0.12 2.03,-0.64 3.71,-1.93 4.4,-3.38 0.24,-0.5 0.24,-0.58 -0.01,-1.14 -0.4,-0.88 -1.75,-2.13 -3.01,-2.76 -1.2,-0.61 -2.56,-0.97 -4.24,-1.14l-1.07,-0.11v-1.1,-1.1l1.15,0.12c3.23,0.32 5.9,1.72 7.07,3.72 0.39,0.66 0.43,0.89 0.48,2.74 0.05,1.88 0.03,2.07 -0.35,2.89 -0.82,1.79 -2.58,3 -5.46,3.74 -0.6,0.16 -0.67,0.22 -0.67,0.64 0,0.26 -0.05,0.47 -0.12,0.46 -0.07,-0 -0.56,-0.42 -1.1,-0.92z"
         android:fillColor="#000000"
         android:strokeWidth="0.15864272"/>
+    <path
+        android:pathData="m18.65,91.12q0,0.02 -0.01,0.03 -0.01,0.01 -0.03,0.02 -0.02,0.01 -0.06,0.01 -0.04,0 -0.11,0 -0.06,0 -0.1,-0 -0.04,-0 -0.06,-0.01 -0.02,-0.01 -0.04,-0.03 -0.01,-0.02 -0.02,-0.04l-0.27,-0.68q-0.05,-0.12 -0.1,-0.21 -0.05,-0.1 -0.12,-0.17 -0.07,-0.07 -0.16,-0.11 -0.09,-0.04 -0.23,-0.04h-0.26v1.23q0,0.02 -0.01,0.03 -0.01,0.01 -0.03,0.02 -0.02,0.01 -0.06,0.01 -0.04,0.01 -0.09,0.01 -0.06,0 -0.09,-0.01 -0.04,-0 -0.06,-0.01 -0.02,-0.01 -0.03,-0.02 -0.01,-0.01 -0.01,-0.03v-2.68q0,-0.09 0.04,-0.12 0.05,-0.04 0.1,-0.04h0.62q0.11,0 0.18,0.01 0.07,0 0.13,0.01 0.17,0.03 0.3,0.09 0.13,0.06 0.22,0.16 0.09,0.1 0.13,0.22 0.04,0.12 0.04,0.27 0,0.15 -0.04,0.26 -0.04,0.11 -0.11,0.2 -0.07,0.09 -0.18,0.15 -0.1,0.06 -0.23,0.11 0.07,0.03 0.13,0.08 0.06,0.05 0.11,0.11 0.05,0.07 0.1,0.15 0.04,0.09 0.09,0.2l0.26,0.64q0.03,0.08 0.04,0.11 0.01,0.03 0.01,0.05zM18.07,89.09q0,-0.17 -0.08,-0.29 -0.08,-0.12 -0.26,-0.17 -0.06,-0.02 -0.13,-0.02 -0.07,-0.01 -0.18,-0.01h-0.32v0.98h0.38q0.15,0 0.26,-0.04 0.11,-0.04 0.19,-0.1 0.07,-0.07 0.11,-0.16 0.04,-0.09 0.04,-0.19z"
+        android:fillAlpha="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#ffffff"
+        android:strokeWidth="0.76499999"
+        android:strokeAlpha="1"/>
+    <path
+        android:pathData="m20.82,91.02q0,0.04 -0,0.07 -0,0.03 -0.02,0.05 -0.01,0.02 -0.03,0.03 -0.01,0.01 -0.03,0.01h-1.39q-0.05,0 -0.1,-0.03 -0.04,-0.04 -0.04,-0.12v-2.58q0,-0.09 0.04,-0.12 0.05,-0.04 0.1,-0.04h1.37q0.02,0 0.03,0.01 0.02,0.01 0.02,0.03 0.01,0.02 0.01,0.05 0.01,0.03 0.01,0.07 0,0.04 -0.01,0.07 -0,0.03 -0.01,0.05 -0.01,0.02 -0.02,0.03 -0.01,0.01 -0.03,0.01h-1.13v0.91h0.97q0.02,0 0.03,0.01 0.02,0.01 0.02,0.03 0.01,0.02 0.02,0.05 0,0.03 0,0.07 0,0.04 -0,0.07 -0,0.03 -0.02,0.05 -0.01,0.02 -0.02,0.03 -0.01,0.01 -0.03,0.01h-0.97v1.04L20.75,90.86q0.02,0 0.03,0.01 0.02,0.01 0.03,0.03 0.01,0.02 0.02,0.05 0,0.03 0,0.07z"
+        android:fillAlpha="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#ffffff"
+        android:strokeWidth="0.76499999"
+        android:strokeAlpha="1"/>
+    <path
+        android:pathData="m22.96,90.37q0,0.2 -0.08,0.36 -0.07,0.16 -0.21,0.27 -0.13,0.11 -0.31,0.17 -0.18,0.06 -0.39,0.06 -0.15,0 -0.27,-0.02 -0.12,-0.02 -0.22,-0.06 -0.1,-0.04 -0.16,-0.07 -0.06,-0.04 -0.09,-0.06 -0.02,-0.03 -0.04,-0.07 -0.01,-0.04 -0.01,-0.11 0,-0.05 0,-0.08 0,-0.03 0.01,-0.05 0.01,-0.02 0.02,-0.03 0.01,-0.01 0.03,-0.01 0.03,0 0.09,0.04 0.06,0.04 0.15,0.08 0.09,0.04 0.21,0.09 0.13,0.04 0.29,0.04 0.13,0 0.23,-0.03 0.11,-0.03 0.18,-0.09 0.08,-0.06 0.12,-0.15 0.04,-0.09 0.04,-0.2 0,-0.12 -0.06,-0.21 -0.06,-0.09 -0.15,-0.15 -0.09,-0.07 -0.21,-0.12 -0.12,-0.06 -0.24,-0.11 -0.12,-0.06 -0.24,-0.13 -0.12,-0.07 -0.21,-0.16 -0.09,-0.09 -0.15,-0.22 -0.06,-0.13 -0.06,-0.3 0,-0.18 0.06,-0.32 0.07,-0.14 0.18,-0.24 0.12,-0.1 0.28,-0.15 0.16,-0.05 0.35,-0.05 0.1,0 0.19,0.02 0.1,0.02 0.18,0.04 0.09,0.03 0.15,0.06 0.07,0.03 0.09,0.06 0.02,0.02 0.03,0.03 0.01,0.01 0.01,0.03 0,0.02 0.01,0.04 0,0.03 0,0.07 0,0.04 -0,0.07 -0,0.03 -0.01,0.05 -0.01,0.02 -0.02,0.03 -0.01,0.01 -0.03,0.01 -0.02,0 -0.08,-0.03 -0.05,-0.03 -0.13,-0.07 -0.08,-0.04 -0.18,-0.07 -0.1,-0.03 -0.23,-0.03 -0.12,0 -0.21,0.03 -0.09,0.03 -0.15,0.09 -0.06,0.05 -0.09,0.13 -0.03,0.07 -0.03,0.16 0,0.12 0.06,0.21 0.06,0.09 0.15,0.15 0.09,0.07 0.21,0.12 0.12,0.06 0.24,0.11 0.12,0.06 0.24,0.13 0.12,0.07 0.21,0.16 0.09,0.09 0.15,0.22 0.06,0.13 0.06,0.3z"
+        android:fillAlpha="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#ffffff"
+        android:strokeWidth="0.76499999"
+        android:strokeAlpha="1"/>
+    <path
+        android:pathData="m25.32,90.08q0,0.26 -0.06,0.47 -0.06,0.21 -0.17,0.36 -0.11,0.15 -0.27,0.23 -0.16,0.08 -0.37,0.08 -0.09,0 -0.17,-0.02 -0.08,-0.02 -0.15,-0.06 -0.07,-0.04 -0.14,-0.1 -0.07,-0.06 -0.15,-0.14v1.01q0,0.02 -0.01,0.03 -0.01,0.01 -0.03,0.02 -0.02,0.01 -0.06,0.01 -0.04,0 -0.09,0 -0.05,0 -0.09,-0 -0.04,-0 -0.06,-0.01 -0.02,-0.01 -0.03,-0.02 -0.01,-0.01 -0.01,-0.03v-2.81q0,-0.02 0.01,-0.03 0.01,-0.01 0.03,-0.02 0.02,-0.01 0.05,-0.01 0.03,-0 0.08,-0 0.05,0 0.08,0 0.03,0 0.05,0.01 0.02,0.01 0.03,0.02 0.01,0.01 0.01,0.03v0.27q0.09,-0.09 0.18,-0.16 0.09,-0.07 0.17,-0.11 0.09,-0.05 0.18,-0.07 0.09,-0.02 0.19,-0.02 0.22,0 0.37,0.09 0.15,0.09 0.25,0.23 0.1,0.15 0.14,0.34 0.04,0.19 0.04,0.41zM24.93,90.13q0,-0.15 -0.02,-0.3 -0.02,-0.15 -0.08,-0.26 -0.06,-0.11 -0.15,-0.18 -0.1,-0.07 -0.24,-0.07 -0.07,0 -0.14,0.02 -0.07,0.02 -0.14,0.07 -0.07,0.04 -0.15,0.12 -0.08,0.07 -0.17,0.18v0.8q0.15,0.19 0.29,0.28 0.14,0.1 0.29,0.1 0.14,0 0.24,-0.07 0.1,-0.07 0.16,-0.18 0.06,-0.11 0.09,-0.25 0.03,-0.14 0.03,-0.28z"
+        android:fillAlpha="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#ffffff"
+        android:strokeWidth="0.76499999"
+        android:strokeAlpha="1"/>
+    <path
+        android:pathData="m27.6,90.03q0,0.09 -0.04,0.13 -0.04,0.04 -0.1,0.04h-1.32q0,0.17 0.03,0.3 0.03,0.13 0.11,0.23 0.08,0.1 0.2,0.15 0.13,0.05 0.31,0.05 0.14,0 0.26,-0.02 0.11,-0.02 0.19,-0.05 0.08,-0.03 0.13,-0.05 0.05,-0.02 0.08,-0.02 0.02,0 0.03,0.01 0.01,0.01 0.02,0.02 0.01,0.02 0.01,0.04 0,0.03 0,0.07 0,0.03 -0,0.05 -0,0.02 -0.01,0.04 -0,0.02 -0.01,0.03 -0.01,0.01 -0.02,0.03 -0.01,0.01 -0.07,0.04 -0.06,0.03 -0.16,0.05 -0.1,0.03 -0.22,0.05 -0.13,0.02 -0.27,0.02 -0.25,0 -0.44,-0.07 -0.19,-0.07 -0.31,-0.21 -0.13,-0.14 -0.19,-0.34 -0.06,-0.21 -0.06,-0.48 0,-0.26 0.07,-0.47 0.07,-0.21 0.19,-0.35 0.13,-0.15 0.31,-0.22 0.18,-0.08 0.4,-0.08 0.24,0 0.4,0.08 0.17,0.08 0.28,0.21 0.11,0.13 0.16,0.3 0.05,0.17 0.05,0.37zM27.23,89.92q0.01,-0.29 -0.13,-0.46 -0.13,-0.17 -0.4,-0.17 -0.14,0 -0.24,0.05 -0.1,0.05 -0.17,0.14 -0.07,0.09 -0.11,0.2 -0.04,0.11 -0.04,0.24z"
+        android:fillAlpha="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#ffffff"
+        android:strokeWidth="0.76499999"
+        android:strokeAlpha="1"/>
+    <path
+        android:pathData="m29.61,90.82q0,0.04 -0,0.07 -0,0.03 -0.01,0.05 -0,0.02 -0.01,0.03 -0.01,0.01 -0.04,0.04 -0.03,0.03 -0.09,0.07 -0.07,0.04 -0.15,0.07 -0.08,0.03 -0.18,0.05 -0.1,0.02 -0.2,0.02 -0.22,0 -0.39,-0.07 -0.17,-0.07 -0.28,-0.21 -0.11,-0.14 -0.17,-0.34 -0.06,-0.2 -0.06,-0.46 0,-0.3 0.07,-0.51 0.07,-0.21 0.2,-0.35 0.13,-0.14 0.3,-0.2 0.17,-0.07 0.37,-0.07 0.1,0 0.19,0.02 0.09,0.02 0.17,0.05 0.08,0.03 0.13,0.07 0.06,0.04 0.09,0.06 0.03,0.03 0.04,0.04 0.01,0.02 0.02,0.04 0.01,0.02 0.01,0.05 0,0.03 0,0.07 0,0.09 -0.02,0.12 -0.02,0.03 -0.05,0.03 -0.03,0 -0.08,-0.04 -0.04,-0.04 -0.11,-0.08 -0.07,-0.04 -0.16,-0.08 -0.09,-0.04 -0.22,-0.04 -0.27,0 -0.41,0.21 -0.14,0.2 -0.14,0.59 0,0.19 0.04,0.34 0.04,0.15 0.11,0.24 0.07,0.1 0.17,0.15 0.11,0.05 0.24,0.05 0.13,0 0.22,-0.04 0.1,-0.04 0.17,-0.09 0.07,-0.05 0.12,-0.09 0.05,-0.04 0.08,-0.04 0.02,0 0.03,0.01 0.01,0.01 0.02,0.03 0.01,0.02 0.01,0.05 0,0.03 0,0.08z"
+        android:fillAlpha="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#ffffff"
+        android:strokeWidth="0.76499999"
+        android:strokeAlpha="1"/>
+    <path
+        android:pathData="m31.76,91.12q0,0.02 -0.01,0.03 -0.01,0.01 -0.03,0.02 -0.02,0.01 -0.06,0.01 -0.04,0 -0.1,0 -0.06,0 -0.1,-0 -0.04,-0 -0.06,-0.01 -0.03,-0.01 -0.04,-0.02 -0.02,-0.02 -0.03,-0.04l-0.85,-1.12v1.12q0,0.02 -0.01,0.03 -0.01,0.01 -0.03,0.02 -0.02,0.01 -0.06,0.01 -0.04,0 -0.09,0 -0.05,0 -0.09,-0 -0.04,-0 -0.06,-0.01 -0.02,-0.01 -0.03,-0.02 -0.01,-0.01 -0.01,-0.03v-2.99q0,-0.02 0.01,-0.03 0.01,-0.01 0.03,-0.02 0.02,-0.01 0.06,-0.01 0.04,-0 0.09,-0 0.06,0 0.09,0 0.04,0 0.06,0.01 0.02,0.01 0.03,0.02 0.01,0.01 0.01,0.03v1.82l0.76,-0.84q0.02,-0.02 0.04,-0.04 0.02,-0.02 0.05,-0.02 0.03,-0.01 0.07,-0.01 0.04,-0 0.09,-0 0.06,0 0.09,0 0.04,0 0.06,0.01 0.02,0.01 0.03,0.02 0.01,0.01 0.01,0.03 0,0.03 -0.02,0.05 -0.01,0.03 -0.05,0.06l-0.73,0.73 0.82,1.06q0.03,0.04 0.04,0.06 0.01,0.02 0.01,0.04z"
+        android:fillAlpha="1"
+        android:strokeColor="#00000000"
+        android:fillColor="#ffffff"
+        android:strokeWidth="0.76499999"
+        android:strokeAlpha="1"/>
+    <path
+        android:pathData="m19,86.24c-0.21,-0.01 -0.36,-0.04 -0.53,-0.09 -0.4,-0.12 -0.77,-0.36 -1.04,-0.68 -0.26,-0.31 -0.43,-0.68 -0.49,-1.08 -0.02,-0.12 -0.02,-0.2 -0.02,-0.33 0,-0.11 0,-0.16 0.01,-0.24 0.08,-0.69 0.48,-1.3 1.08,-1.65 0.06,-0.04 0.18,-0.09 0.24,-0.12 0.29,-0.12 0.59,-0.18 0.88,-0.17 0.07,0 0.15,0.01 0.17,0.01l0.01,0v0.33,0.33l-0.01,-0c-0.06,-0.01 -0.25,-0.02 -0.34,-0.01 -0.2,0.02 -0.37,0.07 -0.55,0.15 -0.42,0.21 -0.73,0.6 -0.82,1.07 -0.02,0.11 -0.03,0.19 -0.03,0.32 0,0.1 0,0.14 0.02,0.22 0.08,0.49 0.41,0.92 0.86,1.13 0.16,0.07 0.3,0.11 0.48,0.13 0.07,0.01 0.26,0.01 0.32,-0 0.03,-0 0.05,-0.01 0.05,-0.01l0.01,-0v0.33,0.33l-0.01,0c-0.04,0.01 -0.24,0.01 -0.3,0.01zM22.7,86.24c-0.2,-0.01 -0.36,-0.04 -0.53,-0.09 -0.29,-0.09 -0.58,-0.24 -0.81,-0.44 -0.41,-0.36 -0.67,-0.86 -0.74,-1.4 -0.01,-0.09 -0.01,-0.13 -0.01,-0.24 0,-0.11 0,-0.16 0.01,-0.24 0.08,-0.69 0.48,-1.3 1.08,-1.65 0.06,-0.04 0.18,-0.09 0.24,-0.12 0.29,-0.12 0.59,-0.18 0.88,-0.17 0.07,0 0.15,0.01 0.17,0.01l0.01,0v0.33,0.33l-0.01,-0c-0,-0 -0.03,-0 -0.05,-0.01 -0.07,-0.01 -0.26,-0.01 -0.33,0 -0.2,0.02 -0.37,0.08 -0.53,0.16 -0.23,0.12 -0.43,0.29 -0.57,0.51 -0.08,0.12 -0.14,0.24 -0.18,0.37 -0.02,0.06 -0.04,0.13 -0.04,0.13 0,0 0.29,0 0.63,0h0.63v0.33,0.33h-0.63,-0.63l0,0.01c0.01,0.04 0.05,0.17 0.08,0.24 0.02,0.05 0.08,0.16 0.1,0.2 0.14,0.23 0.33,0.41 0.57,0.54 0.19,0.11 0.41,0.17 0.64,0.19 0.08,0.01 0.27,-0 0.31,-0.01 0.01,-0 0.01,0.01 0.01,0.33v0.33l-0.01,0c-0.04,0.01 -0.24,0.01 -0.3,0.01z"
+        android:fillColor="#ffffff"
+        android:strokeWidth="0.00305542"/>
 </vector>
