--- a/app/src/main/res/menu/menu_subject.xml
+++ b/app/src/main/res/menu/menu_subject.xml
@@ -12,6 +12,12 @@
             android:title="@string/action_supervised_mode"
             app:showAsAction="never" />
 
+        <item
+            android:id="@+id/action_close_app"
+            android:orderInCategory="100"
+            android:title="@string/action_close_app"
+            app:showAsAction="never" />
+
     </group>
 
 </menu>
