--- a/app/src/main/res/menu/menu_supervised.xml
+++ b/app/src/main/res/menu/menu_supervised.xml
@@ -11,6 +11,13 @@
             android:orderInCategory="10"
             android:title="@string/action_subject_mode"
             app:showAsAction="never"/>
+
+        <item
+            android:id="@+id/action_close_app"
+            android:orderInCategory="100"
+            android:title="@string/action_close_app"
+            app:showAsAction="never" />
+
         <!--
         <item
             android:id="@+id/action_settings"
