Made AQ graphs clearer. Used bar chart instead of line chart for bins. Stored state so that when fragments are changed, the chart data is kept.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     </integer-array>
 
     <color name="breathing_graph_line_color">#303F9F</color>
+    <color name="bins_graph_color">#bbbbbb</color>
 </resources>
