--- a/app/src/main/res/layout/fragment_graphs.xml
+++ b/app/src/main/res/layout/fragment_graphs.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SupervisedAllGraphsFragment">
+    tools:context=".fragments.SupervisedAQGraphsFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -39,7 +39,7 @@
                     android:layout_gravity="center_horizontal"
                     android:text="@string/graphs_bins_title" />
 
-                <com.github.mikephil.charting.charts.LineChart
+                <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/bins_line_chart"
                     android:layout_width="match_parent"
                     android:layout_height="250dp" />
