--- a/app/src/main/res/menu/menu_subject.xml
+++ b/app/src/main/res/menu/menu_subject.xml
@@ -4,19 +4,34 @@
       tools:context="com.specknet.airrespeck.activities.MainActivity">
 
     <group
-        android:id="@+id/daphne_menu_group">
+        android:id="@+id/main_menu_group">
 
         <item
-            android:id="@+id/action_supervised_mode"
-            android:orderInCategory="90"
-            android:title="@string/action_supervised_mode"
-            app:showAsAction="never" />
+            android:id="@+id/action_subject_mode"
+            android:orderInCategory="10"
+            android:title="@string/action_subject_mode"
+            app:showAsAction="never"/>
 
         <item
             android:id="@+id/action_close_app"
             android:orderInCategory="100"
             android:title="@string/action_close_app"
             app:showAsAction="never" />
+
+        <!--
+        <item
+            android:id="@+id/action_settings"
+            android:icon="@drawable/ic_settings"
+            android:orderInCategory="90"
+            android:title="@string/action_settings"
+            app:showAsAction="never"/>
+
+        <item
+            android:id="@+id/action_user_profile"
+            android:orderInCategory="80"
+            android:title="@string/action_user_profile"
+            app:showAsAction="never" />
+        -->
 
     </group>
 
