--- a/app/src/main/res/layout/fragment_aq_map_loader.xml
+++ b/app/src/main/res/layout/fragment_aq_map_loader.xml
@@ -104,7 +104,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/historical_loader_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
