--- a/app/src/main/res/layout/fragment_aq_map_loader.xml
+++ b/app/src/main/res/layout/fragment_aq_map_loader.xml
@@ -37,6 +37,7 @@
         android:id="@+id/custom_selection_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -55,18 +56,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:textAllCaps="false"
                 android:background="@android:color/transparent"
-                android:text="Date"/>
+                android:text="Date"
+                android:textAllCaps="false"/>
 
             <Button
                 android:id="@+id/time_from"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:textAllCaps="false"
                 android:background="@android:color/transparent"
-                android:text="Time"/>
+                android:text="Time"
+                android:textAllCaps="false"/>
         </LinearLayout>
 
         <LinearLayout
@@ -85,18 +86,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:textAllCaps="false"
                 android:background="@android:color/transparent"
-                android:text="Date"/>
+                android:text="Date"
+                android:textAllCaps="false"/>
 
             <Button
                 android:id="@+id/time_to"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.5"
-                android:textAllCaps="false"
                 android:background="@android:color/transparent"
-                android:text="Time"/>
+                android:text="Time"
+                android:textAllCaps="false"/>
         </LinearLayout>
     </LinearLayout>
 
@@ -106,8 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="15dp"
-        android:textAllCaps="false"
-        android:text="@string/maps_loader_historical_button"/>
+        android:text="@string/maps_loader_historical_button"
+        android:textAllCaps="false"/>
 
 </LinearLayout>
