--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,10 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CircularThemeProgressBar" parent="android:Widget.Holo.ProgressBar">
+        <item name="cpb_sweep_speed">0.8</item>
+        <item name="cpb_rotation_speed">0.8</item>
+    </style>
 
     <style name="FontSizeSmall">
         <item name="android:textSize">@dimen/font_size_small</item>
