--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,6 @@
     <color name="breathing_graph_line_color">#303F9F</color>
     <color name="bins_graph_color">#bbbbbb</color>
 
-    <color name="pollution_low">#00ff00</color>
-    <color name="pollution_high">#ff0000</color>
+    <color name="pollution_low">#7eb9fc</color>
+    <color name="pollution_high">#ff9400</color>
 </resources>
