--- a/app/src/main/res/layout/fragment_aqreadings_list_segmentedbar.xml
+++ b/app/src/main/res/layout/fragment_aqreadings_list_segmentedbar.xml
@@ -4,7 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="15dp">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/sb_item_list"
@@ -13,8 +16,8 @@
         android:layout_height="match_parent"
         app:layoutManager="LinearLayoutManager"
         tools:context=".fragments.SupervisedAirspeckReadingsFragment"
-        tools:listitem="@layout/list_item_segmentedbar" />
+        tools:listitem="@layout/list_item_segmentedbar"/>
 
-    <include layout="@layout/content_connecting" />
+    <include layout="@layout/content_connecting"/>
 
 </RelativeLayout>
