--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,110 @@
     <color name="breathing_graph_line_color">#303F9F</color>
     <color name="bins_graph_color">#bbbbbb</color>
 
-    <color name="pollution_low">#7eb9fc</color>
-    <color name="pollution_high">#ff9400</color>
+    <color name="pollution_low">#fde724</color>
+    <color name="pollution_high">#440154</color>
+    <color name="pollution_medium">#218e8c</color>
+
+    <string-array name="viridis">
+        <item name="0">#fde724</item>
+        <item name="1">#f8e621</item>
+        <item name="2">#f1e51c</item>
+        <item name="3">#ece41a</item>
+        <item name="4">#e4e318</item>
+        <item name="5">#dfe318</item>
+        <item name="6">#d7e219</item>
+        <item name="7">#cfe11c</item>
+        <item name="8">#cae01e</item>
+        <item name="9">#c2df22</item>
+        <item name="10">#bdde26</item>
+        <item name="11">#b5dd2b</item>
+        <item name="12">#addc30</item>
+        <item name="13">#a7db33</item>
+        <item name="14">#9fd938</item>
+        <item name="15">#9ad83c</item>
+        <item name="16">#92d741</item>
+        <item name="17">#8dd644</item>
+        <item name="18">#86d449</item>
+        <item name="19">#7ed24e</item>
+        <item name="20">#79d151</item>
+        <item name="21">#72cf55</item>
+        <item name="22">#6dce58</item>
+        <item name="23">#67cc5c</item>
+        <item name="24">#60c960</item>
+        <item name="25">#5bc862</item>
+        <item name="26">#55c666</item>
+        <item name="27">#51c468</item>
+        <item name="28">#4bc26c</item>
+        <item name="29">#47c06e</item>
+        <item name="30">#42be71</item>
+        <item name="31">#3dbb74</item>
+        <item name="32">#39b976</item>
+        <item name="33">#35b778</item>
+        <item name="34">#32b57a</item>
+        <item name="35">#2eb27c</item>
+        <item name="36">#2ab07e</item>
+        <item name="37">#28ae7f</item>
+        <item name="38">#25ab81</item>
+        <item name="39">#23a982</item>
+        <item name="40">#21a784</item>
+        <item name="41">#20a485</item>
+        <item name="42">#1fa286</item>
+        <item name="43">#1e9f88</item>
+        <item name="44">#1e9d88</item>
+        <item name="45">#1e9a89</item>
+        <item name="46">#1e998a</item>
+        <item name="47">#1f968b</item>
+        <item name="48">#1f938b</item>
+        <item name="49">#20918c</item>
+        <item name="50">#218e8c</item>
+        <item name="51">#218c8d</item>
+        <item name="52">#22898d</item>
+        <item name="53">#23878d</item>
+        <item name="54">#24858d</item>
+        <item name="55">#25828e</item>
+        <item name="56">#26808e</item>
+        <item name="57">#277d8e</item>
+        <item name="58">#287b8e</item>
+        <item name="59">#29798e</item>
+        <item name="60">#2a768e</item>
+        <item name="61">#2b748e</item>
+        <item name="62">#2c718e</item>
+        <item name="63">#2d6f8e</item>
+        <item name="64">#2e6c8e</item>
+        <item name="65">#2f698d</item>
+        <item name="66">#30678d</item>
+        <item name="67">#31648d</item>
+        <item name="68">#32628d</item>
+        <item name="69">#345f8d</item>
+        <item name="70">#355c8c</item>
+        <item name="71">#365a8c</item>
+        <item name="72">#38578c</item>
+        <item name="73">#39558b</item>
+        <item name="74">#3a528b</item>
+        <item name="75">#3b508a</item>
+        <item name="76">#3d4c89</item>
+        <item name="77">#3e4989</item>
+        <item name="78">#3f4788</item>
+        <item name="79">#404387</item>
+        <item name="80">#414186</item>
+        <item name="81">#423d84</item>
+        <item name="82">#433a83</item>
+        <item name="83">#443781</item>
+        <item name="84">#45347f</item>
+        <item name="85">#46317e</item>
+        <item name="86">#462d7c</item>
+        <item name="87">#472b7a</item>
+        <item name="88">#472777</item>
+        <item name="89">#482374</item>
+        <item name="90">#482172</item>
+        <item name="91">#481d6f</item>
+        <item name="92">#481a6c</item>
+        <item name="93">#471669</item>
+        <item name="94">#471265</item>
+        <item name="95">#470f62</item>
+        <item name="96">#460b5e</item>
+        <item name="97">#45085b</item>
+        <item name="98">#440357</item>
+        <item name="99">#440154</item>
+    </string-array>
 </resources>
