Bux fix activity summary Volume calibration added subject name

--- a/app/src/main/res/layout/activity_volume_calibration_recording.xml
+++ b/app/src/main/res/layout/activity_volume_calibration_recording.xml
@@ -6,6 +6,24 @@
               android:weightSum="1">
 
     <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_weight="0.04"
+        android:gravity="center"
+        android:text="Enter subjects name"/>
+
+    <EditText
+        android:id="@+id/name_text_field"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.04"
+        android:ems="10"
+        android:hint="Name"
+        android:inputType="textPersonName"/>
+
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
