Extracted step count into own class. Integrated with RESpeckPacketHandler. Uploading minute step count. Force reloading of properties (config) file when Activity is created.

--- a/app/src/main/res/layout/fragment_stepcount.xml
+++ b/app/src/main/res/layout/fragment_stepcount.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
-            android:text="Stepcount: "
+            android:text="Stepcount in minute: "
             android:textColor="@android:color/black"
             android:textSize="30sp"/>
 
