Changed color of diary button. Deleted battery indicator.

--- a/app/src/main/res/drawable/clickable_button_background.xml
+++ b/app/src/main/res/drawable/clickable_button_background.xml
@@ -17,8 +17,8 @@
         <shape>
             <gradient
                 android:angle="270"
-                android:endColor="#ffa500"
-                android:startColor="#ffcf82"/>
+                android:endColor="#ff8000"
+                android:startColor="#ffbf36"/>
             <corners
                 android:radius="20dp"/>
             <padding
