--- a/app/src/main/res/layout/fragment_subject_home.xml
+++ b/app/src/main/res/layout/fragment_subject_home.xml
@@ -18,10 +18,11 @@
         android:weightSum="1">
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/diary_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/clickable_button_background"
             android:padding="15dp"
             app:srcCompat="@drawable/vec_diary"/>
@@ -32,23 +33,30 @@
             android:layout_gravity="center"
             android:layout_marginBottom="20dp"
             android:background="@drawable/background_rounded_lightgrey"
-            android:paddingBottom="20dp"
+            android:paddingBottom="30dp"
             android:paddingLeft="40dp"
             android:paddingRight="40dp"
-            android:paddingTop="20dp">
+            android:paddingTop="30dp">
 
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="20dp"
+                android:layout_marginBottom="30dp"
                 >
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_height="80dp"
                     android:layout_weight="1"
                     android:paddingRight="20dp"
                     app:srcCompat="@drawable/vec_respeck"/>
+
+                <ProgressBar
+                    android:id="@+id/progress_bar_respeck"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:layout_gravity="center_vertical"/>
 
                 <ImageView
                     android:id="@+id/connected_status_respeck"
@@ -57,7 +65,8 @@
                     android:layout_weight="0.3"
                     android:paddingBottom="15dp"
                     android:paddingTop="15dp"
-                    app:srcCompat="@drawable/vec_xmark"/>
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/vec_wireless"/>
             </TableRow>
 
             <TableRow
@@ -73,6 +82,13 @@
                     app:srcCompat="@drawable/vec_airspeck"
                     />
 
+                <ProgressBar
+                    android:id="@+id/progress_bar_airspeck"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="65dp"
+                    android:layout_height="65dp"
+                    android:layout_gravity="center_vertical"/>
+
                 <ImageView
                     android:id="@+id/connected_status_airspeck"
                     android:layout_width="match_parent"
@@ -80,7 +96,8 @@
                     android:layout_weight="0.3"
                     android:paddingBottom="15dp"
                     android:paddingTop="15dp"
-                    app:srcCompat="@drawable/vec_xmark"/>
+                    android:visibility="gone"
+                    app:srcCompat="@drawable/vec_wireless"/>
             </TableRow>
 
         </TableLayout>
