--- a/app/src/main/res/layout/fragment_subject_home.xml
+++ b/app/src/main/res/layout/fragment_subject_home.xml
@@ -21,7 +21,7 @@
             android:id="@+id/diary_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
+            android:layout_marginBottom="40dp"
             android:layout_marginTop="30dp"
             android:background="@drawable/clickable_button_background"
             android:padding="15dp"
@@ -53,10 +53,11 @@
 
                 <ProgressBar
                     android:id="@+id/progress_bar_respeck"
-                    style="?android:attr/progressBarStyle"
+                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                     android:layout_width="65dp"
                     android:layout_height="65dp"
-                    android:layout_gravity="center_vertical"/>
+                    android:layout_gravity="center_vertical"
+                    />
 
                 <ImageView
                     android:id="@+id/connected_status_respeck"
@@ -84,10 +85,11 @@
 
                 <ProgressBar
                     android:id="@+id/progress_bar_airspeck"
-                    style="?android:attr/progressBarStyle"
+                    style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
                     android:layout_width="65dp"
                     android:layout_height="65dp"
-                    android:layout_gravity="center_vertical"/>
+                    android:layout_gravity="center_vertical"
+                    />
 
                 <ImageView
                     android:id="@+id/connected_status_airspeck"
