--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#065a61</color>
+    <color name="colorPrimaryDark">#043b40</color>
+    <color name="colorAccent">#065a61</color>
 
     <color name="sb_value_sign_background">#7492E2</color>
     <color name="sb_empty_segment_background">#858585</color>
