--- a/app/src/main/res/menu/menu_supervised.xml
+++ b/app/src/main/res/menu/menu_supervised.xml
@@ -13,10 +13,18 @@
             app:showAsAction="never"/>
 
         <item
+            android:id="@+id/action_view_config"
+            android:orderInCategory="20"
+            android:title="@string/action_view_config"
+            app:showAsAction="never"/>
+
+        <item
             android:id="@+id/action_close_app"
             android:orderInCategory="100"
             android:title="@string/action_close_app"
             app:showAsAction="never"/>
+
+
         <!--
 
         <item
