--- a/app/src/main/res/layout/activity_security_key.xml
+++ b/app/src/main/res/layout/activity_security_key.xml
@@ -35,8 +35,8 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="password"
-        android:inputType="textPersonName"
-        />
+        android:inputType="textPersonName|textPassword"
+        android:password="true"/>
 
     <Button
         android:id="@+id/login_button"
