Added step count to RESpeck readings Let RESpeck readings only update when not NaN

--- a/app/src/main/res/layout/fragment_respeck_readings.xml
+++ b/app/src/main/res/layout/fragment_respeck_readings.xml
@@ -22,7 +22,9 @@
             android:id="@+id/readings_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"/>
+            android:layout_marginBottom="15dp"
+            android:paddingEnd="15dp"
+            android:paddingStart="15dp"/>
 
         <ScrollView
             android:layout_width="match_parent"
