--- a/app/src/main/res/layout/gps_turnon_dialog.xml
+++ b/app/src/main/res/layout/gps_turnon_dialog.xml
@@ -6,6 +6,7 @@
               android:padding="10dp">
 
     <TextView
+        android:id="@+id/text_gps_turn_on"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
