--- a/app/src/main/res/menu/menu_supervised.xml
+++ b/app/src/main/res/menu/menu_supervised.xml
@@ -19,6 +19,12 @@
             app:showAsAction="never"/>
 
         <item
+            android:id="@+id/action_check_for_updates"
+            android:orderInCategory="20"
+            android:title="@string/action_check_for_updates"
+            app:showAsAction="never"/>
+
+        <item
             android:id="@+id/action_close_app"
             android:orderInCategory="100"
             android:title="@string/action_close_app"
