--- a/app/src/main/res/layout/content_connecting.xml
+++ b/app/src/main/res/layout/content_connecting.xml
@@ -5,6 +5,14 @@
     android:id="@+id/connecting_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    />
+<!--
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/connecting_layout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_centerVertical="true"
     android:layout_centerHorizontal="true"
     android:orientation="vertical"
@@ -27,3 +35,4 @@
         android:textAppearance="?android:attr/textAppearanceLarge"/>
 
 </LinearLayout>
+-->
